--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,13 @@
 body {
   background-color: #EEE;
 }
+
+#container {
+  float: center; 
+  width: 75%;
+}
+
+#footer {
+  width: 80%;
+  background-color: #DDD;
+}
