--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,8 +3,9 @@ body {
 }
 
 #container {
-  float: center; 
-  width: 75%;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #footer {
