--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,16 @@
 body {
-  background-color: #EEE;
+  background-color: #FFF;
 }
 
 #container {
-  width: 800px;
+  width: 1000px;
+  background-color:#EEE;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
 
 #footer {
-  width: 80%;
   background-color: #DDD;
   text-align: center;
 }
