--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,9 @@ body {
 }
 
 #footer {
+  width: 1000px;
   background-color: #DDD;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
